<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/editStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name" />

        <EditText
            android:id="@+id/book_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/editStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name" />
        <EditText
            android:id="@+id/supplier_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/editStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone" />
        <EditText
            android:id="@+id/supplier_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/editStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />
        <EditText
            android:id="@+id/book_price_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="5" />

        <TextView
            style="@style/editStyle"
            android:id="@+id/quantity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="decrementQuantity"
                android:text="-" />
            <EditText
                android:id="@+id/quantity_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="incrementQuantity"
                android:text="+" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>